--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/target_effect_creation_water.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/target_effect_creation_water.yml
@@ -1,10 +1,11 @@
 # Simple recipes made from T0 to T1 essences
 # T1
-# The result is always 75 per cent empty solution
+# The result is always 75% empty solution
 
 - type: reaction
   id: CP14BasicEffectHealBrute
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 2
@@ -22,6 +23,7 @@
 - type: reaction
   id: CP14BasicEffectDamageBrute
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 2
@@ -39,6 +41,8 @@
 - type: reaction
   id: CP14BasicEffectHealHeat
   minTemp: 600
+  priority: 2
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -58,6 +62,7 @@
 - type: reaction
   id: CP14BasicEffectDamageHeat
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -77,6 +82,7 @@
 - type: reaction
   id: CP14BasicEffectHealCold
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -96,6 +102,7 @@
 - type: reaction
   id: CP14BasicEffectDamageCold
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -115,6 +122,7 @@
 - type: reaction
   id: CP14BasicEffectHealPoison
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -134,6 +142,7 @@
 - type: reaction
   id: CP14BasicEffectDamagePoison
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -153,6 +162,7 @@
 - type: reaction
   id: CP14BasicEffectHealAirloss
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -172,6 +182,7 @@
 - type: reaction
   id: CP14BasicEffectDamageAirloss
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -191,6 +202,7 @@
 - type: reaction
   id: CP14BasicEffectBloodRestore
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -210,6 +222,7 @@
 - type: reaction
   id: CP14BasicEffectBloodAbsorption
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceLife:
       amount: 1
@@ -234,6 +247,7 @@
 - type: reaction
   id: CP14BasicEffectSpeedUp
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceMotion:
       amount: 2
@@ -251,6 +265,7 @@
 - type: reaction
   id: CP14BasicEffectSpeedDown
   minTemp: 600
+  priority: 2
   reactants:
     CP14EssenceMotion:
       amount: 2
