--- a/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Fills/closets.yml
@@ -5,6 +5,7 @@
   components:
   - type: StorageFill
     contents:
+      - id: CP14Lighter
       - id: CP14Syringe
         amount: 2
       - id: CP14Cauldron
