--- a/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
+++ b/Resources/Prototypes/_CP14/Catalog/Cargo/crates.yml
@@ -6,20 +6,11 @@
   - type: StorageFill
     contents:
       - id: CP14VialTiny
-        amount: 9
+        amount: 5
       - id: CP14VialSmall
-        amount: 8
-        #Gift
-      - id: CP14Dropper
-        prob: 0.2
-      - id: CP14Mortar
-        prob: 0.2
-      - id: CP14Pestle
-        prob: 0.2
-      - id: CP14VialSmall
-        prob: 0.2
-      - id: CP14VialTiny
-        prob: 0.2
+        amount: 5
+      - id: CP14VialMedium
+        amount: 5
       - id: CP14GlassShard #Lol. Something broken
         prob: 0.2
 
