--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -75,6 +75,7 @@
   - type: ContainerContainer
     containers:
       paper_label: !type:ContainerSlot
+  - type: ItemSlots
 
 - type: entity
   parent: CP14BaseVial
