--- a/Resources/Maps/_CP14/factoria.yml
+++ b/Resources/Maps/_CP14/factoria.yml
@@ -85248,7 +85248,7 @@ entities:
       rot: 3.141592653589793 rad
       pos: -27.5,-34.5
       parent: 1
-- proto: CP14VialSmallGroundQuartz
+- proto: CP14VialSmall
   entities:
   - uid: 14506
     components:
