--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/whistler_poison.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/whistler_poison.yml
@@ -1,5 +1,5 @@
 
-# Splitting
+# Splitting: Applying magical dispel to split precursor into essences.
 
 - type: reaction
   id: CP14WhistlerPoisonSplitting
