--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vials.yml
@@ -289,7 +289,9 @@
   - type: SolutionContainerManager
     solutions:
       vial:
-        maxVol: 30
+        maxVol: 50
   - type: SolutionContainerVisuals
     maxFillLevels: 5
     fillBaseName: liq-
+  - type: Injector
+    transferAmount: 10
