--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/blue_amanita.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/blue_amanita.yml
@@ -1,5 +1,5 @@
 
-# Splitting
+# Splitting: Applying magical dispel to split precursor into essences.
 
 - type: reaction
   id: CP14BlueAmanitaSplitting
@@ -13,3 +13,19 @@
   cp14RandomProducts:
   - CP14EssenceWater: 0.5
   - CP14EssenceLife: 0.5
+
+# Admixture: By adding raw precursor to a potion with target solutions, we can reduce the amount of empty solution by modifying the target solutions.
+
+- type: reaction
+  id: CP14BlueAmanitaAdmixture
+  minTemp: 500
+  reactants:
+    CP14BlueAmanita:
+      amount: 1
+    CP14BasicEffectEmpty:
+      amount: 1
+    CP14BasicEffectRainbow:
+      amount: 1
+  products:
+    CP14BasicEffectHealMana: 2
+    CP14BasicEffectDrunk: 1
