--- a/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/dayflin.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Reactions/Thaumaturgy/Precursor/dayflin.yml
@@ -1,5 +1,5 @@
 
-# Splitting
+# Splitting: Applying magical dispel to split precursor into essences.
 
 - type: reaction
   id: CP14DayflinSplitting
@@ -13,3 +13,33 @@
   cp14RandomProducts:
   - CP14EssenceLife: 0.5
   - CP14EssenceMotion: 0.5
+
+# Admixture: By adding raw precursor to a potion with target solutions, we can reduce the amount of empty solution by modifying the target solutions.
+
+- type: reaction
+  id: CP14DayflinAdmixture1
+  minTemp: 500
+  reactants:
+    CP14YellowDayflinPulp:
+      amount: 1
+    CP14BasicEffectEmpty:
+      amount: 1
+    CP14BasicEffectSatiateThirst:
+      amount: 1
+  products:
+    CP14BasicEffectSpeedUp: 2
+    CP14BasicEffectJitter: 1
+
+- type: reaction
+  id: CP14DayflinAdmixture2
+  minTemp: 500
+  reactants:
+    CP14YellowDayflinPulp:
+      amount: 1
+    CP14BasicEffectEmpty:
+      amount: 1
+    CP14BasicEffectSatiateHunger:
+      amount: 1
+  products:
+    CP14BasicEffectSpeedUp: 2
+    CP14BasicEffectJitter: 1
