--- a/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
+++ b/Resources/Prototypes/_CP14/Recipes/Workbench/furnace.yml
@@ -122,4 +122,31 @@
   - !type:KnowledgeRequired
     knowledge: Glasswork
   result: CP14VialSmallReinforced
+
+- type: CP14Recipe
+  id: CP14VialMedium
+  tag: CP14RecipeMeltingFurnace
+  craftTime: 3
+  requirements:
+  - !type:StackResource
+    stack: CP14GlassSheet
+    count: 6
+  - !type:KnowledgeRequired
+    knowledge: Glasswork
+  result: CP14VialMedium
+
+- type: CP14Recipe
+  id: CP14VialMediumReinforced
+  tag: CP14RecipeMeltingFurnace
+  craftTime: 3
+  requirements:
+  - !type:StackResource
+    stack: CP14CopperBar
+    count: 1
+  - !type:StackResource
+    stack: CP14GlassSheet
+    count: 6
+  - !type:KnowledgeRequired
+    knowledge: Glasswork
+  result: CP14VialMediumReinforced
   
