--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/essence_nodes.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/essence_nodes.yml
@@ -13,6 +13,7 @@
     layers:
     - state: node
       shader: unshaded
+  - type: Timer
   - type: TimedSpawner
     chance: 0.75
     intervalSeconds: 15
