--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Tip/arrows.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Tip/arrows.yml
@@ -12,7 +12,7 @@
 - type: entity
   parent: CP14ModularBladeTipBase
   id: CP14ModularTipIronArrow
-  name: iron tip
+  name: iron arrow tip
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
@@ -28,7 +28,7 @@
 - type: entity
   parent: CP14ModularBladeTipBase
   id: CP14ModularTipGoldArrow
-  name: golden tip
+  name: golden arrow tip
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
@@ -45,7 +45,7 @@
 - type: entity
   parent: CP14ModularBladeTipBase
   id: CP14ModularTipCopperArrow
-  name: copper tip
+  name: copper arrow tip
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
@@ -62,7 +62,7 @@
 - type: entity
   parent: CP14ModularBladeTipBase
   id: CP14ModularTipMithrilArrow
-  name: mithril tip
+  name: mithril arrow tip
   components:
   - type: Sprite
     sprite: _CP14/Objects/ModularTools/Tip/arrow.rsi
