--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_signal_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_signal_light.yml
@@ -157,6 +157,7 @@
   abstract: true
   categories: [ ForkFiltered ]
   name: signal light
+  description: A signal of light left by an adventurer possibly in trouble. 
   components:
   - type: TimedDespawn
     lifetime: 12
