Перевод на RU (#949)
* translate

* fix

* yee

* qwerty

* fix

* Signal

* Skeleton

* arrow

* fix

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_signal_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Light/T1_signal_light.yml
@@ -156,6 +156,7 @@
   abstract: true
   categories: [ ForkFiltered ]
   name: signal light
+  description: A signal of light left by an adventurer possibly in trouble. 
   components:
   - type: TimedDespawn
     lifetime: 12
