--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
@@ -7,3 +7,13 @@
   components:
   - type: CP14SmokeBomb
     solution: vial
+  - type: Sprite
+    layers:
+      - state: vial
+      - state: liq-1
+        map: ["enum.SolutionContainerLayers.Fill"]
+        visible: false
+      - state: bomb
+      - state: label
+        visible: false
+        map: ["enum.PaperLabelVisuals.Layer"]
