--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
@@ -8,6 +8,7 @@
   - type: CP14SmokeBomb
     solution: vial
   - type: Sprite
+    noRot: false
     layers:
       - state: vial
       - state: liq-1
