--- a/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/essence_collector.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Specific/Thaumaturgy/essence_collector.yml
@@ -43,6 +43,8 @@
           !type:PhysShapeAabb
           bounds: "-0.25,-0.25,0.25,0.25"
         density: 525
+        layer:
+        - WallLayer
         mask:
         - WallLayer
   - type: SolutionContainerManager
