--- a/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/Specific/Alchemy/vial_bomb.yml
@@ -5,8 +5,29 @@
   name: alchemical bomb
   description: A vial of liquid that explodes with an alchemical reagent cloud when thrown. 
   components:
-  - type: CP14SmokeBomb
-    solution: vial
+  - type: Spillable
+    solution: none #Disable spillable
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 5
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: GlassBreak
+          params:
+            volume: -4
+      - !type:CP14AreaEffectBehavior
+        solution: vial
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          CP14GlassShard:
+            min: 1
+            max: 1
+        transferForensics: true
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
   - type: Sprite
     noRot: false
     layers:
