--- a/Resources/Prototypes/_CP14/Entities/Clothing/OuterClothing/ModularArmor/Cuisses/plate.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/OuterClothing/ModularArmor/Cuisses/plate.yml
@@ -15,7 +15,7 @@
 
 - type: entity
   parent: CP14ModularCuissesBase
-  id: CP14ModularCuissesIronCuirass
+  id: CP14ModularCuissesIronPlate
   name: iron cuisses
   description: Protects the top of your legs, it's harder to move in this one, but the extra protection might be worth it.
   components:
@@ -25,14 +25,14 @@
     - state: icon
   - type: CP14ModularCraftPart
     possibleParts:
-    - CuissesIronCuirass
+    - CuissesIronPlate
   - type: CP14Material
     materials:
       CP14Iron: 10
 
 - type: entity
   parent: CP14ModularCuissesBase
-  id: CP14ModularCuissesGoldCuirass
+  id: CP14ModularCuissesGoldPlate
   name: golden cuisses
   description: Protects the top of the legs, protection is questionable, weight is decent.
   components:
@@ -43,14 +43,14 @@
       color: "#ffaf47"
   - type: CP14ModularCraftPart
     possibleParts:
-    - CuissesGoldCuirass
+    - CuissesGoldPlate
   - type: CP14Material
     materials:
       CP14Gold: 10
 
 - type: entity
   parent: CP14ModularCuissesBase
-  id: CP14ModularCuissesCopperCuirass
+  id: CP14ModularCuissesCopperPlate
   name: copper cuisses
   description: Protects the top of your legs, it's harder to move in this one, but the extra protection might be worth it.
   components:
@@ -61,14 +61,14 @@
       color: "#bd712f"
   - type: CP14ModularCraftPart
     possibleParts:
-    - CuissesCopperCuirass
+    - CuissesCopperPlate
   - type: CP14Material
     materials:
       CP14Copper: 10
 
 - type: entity
   parent: CP14ModularCuissesBase
-  id: CP14ModularCuissesMithrilCuirass
+  id: CP14ModularCuissesMithrilPlate
   name: mithril cuisses
   description: Protects the top of your legs, it's harder to move in this one, but the extra protection might be worth it.
   components:
@@ -79,7 +79,7 @@
       color: "#45d2a4"
   - type: CP14ModularCraftPart
     possibleParts:
-    - CuissesMithrilCuirass
+    - CuissesMithrilPlate
   - type: CP14Material
     materials:
       CP14Mithril: 10
