--- a/Resources/migration.yml
+++ b/Resources/migration.yml
@@ -308,6 +308,7 @@ CP14SpellScrollCounterSpell: CP14ActionSpellMagicSplitting
 #2025-04-03
 CP14TravelingStoreshipAnchor: null
 CP14TravelingShop: CP14TradingBoardBase
+CP14IronCabinetCargo: CP14IronCabinet
 
 # <---> CrystallEdge migration zone end
 
