--- a/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/NPC/skeleton.yml
@@ -1,22 +1,121 @@
 - type: entity
-  id: CP14MobUndeadSkeleton
+  id: CP14MobUndeadSkeletonHalebard
   parent: CP14BaseMobSkeleton
   name: skeleton
   description: Animated by the dark magic of a fragile skeleton. Skeletons are usually extremely intelligent creatures, controlled by a recently deceased soul.
   categories: [ ForkFiltered ]
+  suffix: Halebard
   components:
   - type: NpcFactionMember
     factions:
     - CP14Monster
   - type: Loadout
     prototypes: 
-    - CP14MobSkeleton
+    - CP14MobSkeletonHalebard
+
+- type: entity
+  id: CP14MobUndeadSkeletonSword
+  parent: CP14BaseMobSkeleton
+  name: skeleton
+  description: Animated by the dark magic of a fragile skeleton. Skeletons are usually extremely intelligent creatures, controlled by a recently deceased soul.
+  categories: [ ForkFiltered ]
+  suffix: Sword
+  components:
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: Loadout
+    prototypes: 
+    - CP14MobSkeletonSword
+
+- type: entity
+  id: CP14MobUndeadSkeletonDodger
+  parent: CP14BaseMobSkeleton
+  name: skeleton
+  description: Animated by the dark magic of a fragile skeleton. Skeletons are usually extremely intelligent creatures, controlled by a recently deceased soul.
+  categories: [ ForkFiltered ]
+  suffix: Dodger
+  components:
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: Loadout
+    prototypes: 
+    - CP14MobSkeletonDodger
+
+- type: entity
+  id: CP14MobUndeadSkeletonArcher
+  parent: CP14BaseMobSkeleton
+  name: skeleton
+  description: Animated by the dark magic of a fragile skeleton. Skeletons are usually extremely intelligent creatures, controlled by a recently deceased soul.
+  categories: [ ForkFiltered ]
+  suffix: Archer
+  components:
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: Loadout
+    prototypes: 
+    - CP14MobSkeletonArcher
+
+- type: entity
+  id: CP14MobUndeadSkeletonWizard
+  parent: CP14BaseMobSkeleton
+  name: skeleton
+  description: Animated by the dark magic of a fragile skeleton. Skeletons are usually extremely intelligent creatures, controlled by a recently deceased soul.
+  categories: [ ForkFiltered ]
+  suffix: Wizard
+  components:
+  - type: NpcFactionMember
+    factions:
+    - CP14Monster
+  - type: Loadout
+    prototypes: 
+    - CP14MobSkeletonWizard
 
 - type: entity
   id: SpawnPointGhostDemiplaneSkeleton
   name: ghost role spawn point
   description: A ghost role for a bloodthirsty and cunning skeleton.
-  suffix: skeleton
+  suffix: skeleton random
+  categories: [ ForkFiltered ]
+  parent: MarkerBase
+  components:
+  - type: EntityTableSpawner
+    table: !type:GroupSelector
+      children:
+      - !type:GroupSelector
+        weight: 10
+        children:
+        - id: SpawnPointGhostDemiplaneSkeletonWizard
+      - !type:GroupSelector
+        weight: 25
+        children:
+        - id: SpawnPointGhostDemiplaneSkeletonHalebard
+      - !type:GroupSelector
+        weight: 20
+        children:
+        - id: SpawnPointGhostDemiplaneSkeletonSword
+      - !type:GroupSelector
+        weight: 20
+        children:
+        - id: SpawnPointGhostDemiplaneSkeletonDodger
+      - !type:GroupSelector
+        weight: 20
+        children:
+        - id: SpawnPointGhostDemiplaneSkeletonArcher
+  - type: Sprite
+    sprite: Markers/jobs.rsi
+    layers:
+      - state: green
+      - sprite: _CP14/Mobs/Species/Skeleton/parts.rsi
+        state: full
+
+- type: entity
+  id: SpawnPointGhostDemiplaneSkeletonHalebard
+  name: ghost role spawn point
+  description: A ghost role for a bloodthirsty and cunning skeleton.
+  suffix: skeleton Halebard
   categories: [ ForkFiltered ]
   parent: MarkerBase
   components:
@@ -30,7 +129,111 @@
     raffle:
       settings: default
   - type: GhostRoleMobSpawner
-    prototype: CP14MobUndeadSkeleton
+    prototype: CP14MobUndeadSkeletonHalebard
+  - type: Sprite
+    sprite: Markers/jobs.rsi
+    layers:
+      - state: green
+      - sprite: _CP14/Mobs/Species/Skeleton/parts.rsi
+        state: full
+
+- type: entity
+  id: SpawnPointGhostDemiplaneSkeletonSword
+  name: ghost role spawn point
+  description: A ghost role for a bloodthirsty and cunning skeleton.
+  suffix: skeleton Halebard
+  categories: [ ForkFiltered ]
+  parent: MarkerBase
+  components:
+  - type: GhostRole
+    name: cp14-ghost-role-information-name-skeleton
+    allowMovement: true
+    description: cp14-ghost-role-information-description-skeleton
+    rules: cp14-ghost-role-information-rules-demiplane
+    mindRoles:
+    - CP14MindRoleDemiplaneAntag
+    raffle:
+      settings: default
+  - type: GhostRoleMobSpawner
+    prototype: CP14MobUndeadSkeletonSword
+  - type: Sprite
+    sprite: Markers/jobs.rsi
+    layers:
+      - state: green
+      - sprite: _CP14/Mobs/Species/Skeleton/parts.rsi
+        state: full
+
+- type: entity
+  id: SpawnPointGhostDemiplaneSkeletonDodger
+  name: ghost role spawn point
+  description: A ghost role for a bloodthirsty and cunning skeleton.
+  suffix: skeleton Halebard
+  categories: [ ForkFiltered ]
+  parent: MarkerBase
+  components:
+  - type: GhostRole
+    name: cp14-ghost-role-information-name-skeleton
+    allowMovement: true
+    description: cp14-ghost-role-information-description-skeleton
+    rules: cp14-ghost-role-information-rules-demiplane
+    mindRoles:
+    - CP14MindRoleDemiplaneAntag
+    raffle:
+      settings: default
+  - type: GhostRoleMobSpawner
+    prototype: CP14MobUndeadSkeletonDodger
+  - type: Sprite
+    sprite: Markers/jobs.rsi
+    layers:
+      - state: green
+      - sprite: _CP14/Mobs/Species/Skeleton/parts.rsi
+        state: full
+
+- type: entity
+  id: SpawnPointGhostDemiplaneSkeletonArcher
+  name: ghost role spawn point
+  description: A ghost role for a bloodthirsty and cunning skeleton.
+  suffix: skeleton Halebard
+  categories: [ ForkFiltered ]
+  parent: MarkerBase
+  components:
+  - type: GhostRole
+    name: cp14-ghost-role-information-name-skeleton
+    allowMovement: true
+    description: cp14-ghost-role-information-description-skeleton
+    rules: cp14-ghost-role-information-rules-demiplane
+    mindRoles:
+    - CP14MindRoleDemiplaneAntag
+    raffle:
+      settings: default
+  - type: GhostRoleMobSpawner
+    prototype: CP14MobUndeadSkeletonArcher
+  - type: Sprite
+    sprite: Markers/jobs.rsi
+    layers:
+      - state: green
+      - sprite: _CP14/Mobs/Species/Skeleton/parts.rsi
+        state: full
+
+- type: entity
+  id: SpawnPointGhostDemiplaneSkeletonWizard
+  name: ghost role spawn point
+  description: A ghost role for a bloodthirsty and cunning skeleton.
+  suffix: skeleton Halebard
+  categories: [ ForkFiltered ]
+  parent: MarkerBase
+  components:
+  - type: GhostRole
+    name: cp14-ghost-role-information-name-skeleton
+    allowMovement: true
+    description: cp14-ghost-role-information-description-skeleton
+    rules: cp14-ghost-role-information-rules-demiplane
+    mindRoles:
+    - CP14MindRoleDemiplaneAntag
+    raffle:
+      settings: default
+  - type: GhostRoleMobSpawner
+    prototype: CP14MobUndeadSkeletonWizard
   - type: Sprite
     sprite: Markers/jobs.rsi
     layers:
