--- a/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
+++ b/Resources/Prototypes/_CP14/Entities/Clothing/Rings/ring.yml
@@ -34,7 +34,7 @@
   name: skeleton wizard conductive ring
   suffix: Ice Shards, Unremoveable
   description: A mana conuctive ring for the true wizards
-  hideSpawnMenu: true
+  categories: [ HideSpawnMenu ]
   components:
   - type: Unremoveable
   - type: CP14SpellStorageRequireAttune
